# mt

./: .gitignore  CMakeLists.txt  GLFWRenderWindow.cpp  GLFWRenderWindow.h  README.md  TechniqueTestWindow.cpp  TechniqueTestWindow.h  TestWindow.cpp  TestWindow.h  dumpHardware.h  edit.bat  main.cpp
examples/1_0_dumpHardware/: CMakeLists.txt
examples/1_1_raw_vkr/: CMakeLists.txt  TestWindow.cpp  TestWindow.h  main.cpp
examples/2_1_technique_load/: CMakeLists.txt  TestWindow.cpp  TestWindow.h  main.cpp
examples/3_0_imgui/: CMakeLists.txt  TestWindow.cpp  TestWindow.h  main.cpp
examples/5_0_file_watcher/: CMakeLists.txt  TestWindow.cpp  TestWindow.h  main.cpp
examples/5_0_files_watcher/: CMakeLists.txt  TestWindow.cpp  TestWindow.h  main.cpp
examples/5_1_async_tasks/: CMakeLists.txt  TestWindow.cpp  TestWindow.h
examples/5_2_texture_manager/: CMakeLists.txt  TestWindow.cpp  TestWindow.h
gui/: AsyncTaskGUI.cpp  AsyncTaskGUI.h  BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  GUILib.cpp  GUILib.h  GUIWindow.cpp  GUIWindow.h  IMGuiWidgets.h  ImGuiPropertyGrid.h  ImGuiRAII.h  RenderWindow.cpp  RenderWindow.h  WindowConfiguration.h  fileDialog.cpp  fileDialog.h  modalDialogs.cpp  modalDialogs.h
gui/CameraManipulator/: CameraManipulator.cpp  CameraManipulator.h  FlatCameraManipulator.cpp  FlatCameraManipulator.h  OrbitalCameraManipulator.cpp  OrbitalCameraManipulator.h
gui/TextureViewer/: TextureViewer.cpp  TextureViewer.h  TextureViewerManager.cpp  TextureViewerManager.h
mtlib/ddsSupport/: CMakeLists.txt  ddsSupport.cpp
mtlib/glbSupport/: CMakeLists.txt  glbSupport.cpp  glbSupport.h
mtlib/gltfSupport/: BaseGLTFImporter.cpp  BaseGLTFImporter.h  CMakeLists.txt  GLTFImporter.cpp  GLTFImporter.h  GLTFMaterial.h  gltfSupport.cpp  gltfSupport.h
mtlib/hld/: CMakeLists.txt  DrawPlan.h  DrawStage.cpp  DrawStage.h  Drawable.h  FrameBuildContext.h  FrameContext.cpp  FrameContext.h  FrameTypeIndex.h  HLDLib.cpp  HLDLib.h  RegularDrawStage.cpp  RegularDrawStage.h  StageIndex.h
mtlib/imageIO/: CMakeLists.txt  ddsSupport.cpp  imageIO.h  stbSupport.cpp
resourceManagement/: BufferResourceManager.cpp  BufferResourceManager.h  CMakeLists.txt  FileWatcher.cpp  FileWatcher.h  TechniqueManager.cpp  TechniqueManager.h  TextureManager.cpp  TextureManager.h
technique/: CMakeLists.txt  ConfigurationBuildContext.h  DescriptorSetType.h  PassConfiguration.h  PassConfigurator.cpp  PassConfigurator.h  ResourceBinding.cpp  ResourceBinding.h  Selection.cpp  Selection.h  ShaderCompilator.cpp  ShaderCompilator.h  Technique.cpp  Technique.h  TechniqueConfiguration.cpp  TechniqueConfiguration.h  TechniqueConfigurator.cpp  TechniqueConfigurator.h  TechniqueGonfiguration.h  TechniqueGonfigurator.cpp  TechniqueGonfigurator.h  TechniqueLoader.cpp  TechniqueLoader.h  TechniquePass.h  TechniqueResource.cpp  TechniqueResource.h  TechniqueUniformBlock.cpp  TechniqueUniformBlock.h  TechniqueVolatileContext.h  UniformVariable.cpp  UniformVariable.h
techniquePropertyGrid/: CMakeLists.txt  TechniqueProperty.cpp  TechniqueProperty.h  TechniquePropertyGrid.cpp  TechniquePropertyGrid.h  TechniquePropertyGridCommon.h  TechniquePropertySet.cpp  TechniquePropertySet.h  TechniquePropertySetCommon.h  TechniquePropertyWidget.cpp  TechniquePropertyWidget.h  gui.cpp  gui.h
techniquePropertySet/: CMakeLists.txt  TechniqueProperty.cpp  TechniqueProperty.h  TechniquePropertySet.cpp  TechniquePropertySet.h  gui.cpp
textureProcessor/: Application.cpp  Application.h  BuildTextureTask.cpp  BuildTextureTask.h  CMakeLists.txt  CameraManipulator.cpp  CameraManipulator.h  FlatCameraManipulator.cpp  FlatCameraManipulator.h  MainWindow.cpp  MainWindow.h  OrbitalCameraManipulator.cpp  OrbitalCameraManipulator.h  Project.cpp  Project.h  TechniquePropertyWidget.cpp  TechniquePropertyWidget.h  TechniquePropsWidget.cpp  TechniquePropsWidget.h  TechniquePropsWidgetCommon.h  TextureViewer.cpp  TextureViewer.h
util/: Abort.h  Assert.h  Bimap.h  CMakeLists.txt  Camera.cpp  Camera.h  ContentLoader.cpp  ContentLoader.h  Log.cpp  Log.h  Plane.h  Ref.h  RefCounter.h  ShaderLoader.cpp  ShaderLoader.h  Sphere.h  ViewFrustum.cpp  ViewFrustum.h  util.h  vkMeta.cpp  vkMeta.h
vkr/: CMakeLists.txt  DataBuffer.cpp  DataBuffer.h  DescriptorCounter.cpp  DescriptorCounter.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferFormat.cpp  FrameBufferFormat.h  GLFWRenderWindow.cpp  GLFWRenderWindow.h  Image.cpp  Image.h  ImageAccess.cpp  ImageAccess.h  ImageFormatFeatures.cpp  ImageFormatFeatures.h  ImageSlice.cpp  ImageSlice.h  ImageView.cpp  ImageView.h  ImagesAccessSet.cpp  ImagesAccessSet.h  MemoryInfo.h  PhysicalDevice.cpp  PhysicalDevice.h  PlainBuffer.cpp  PlainBuffer.h  Ref.h  RefCntr.h  Sampler.cpp  Sampler.h  SwapChain.cpp  SwapChain.h  (+6 more)
vkr/image/: Image.cpp  Image.h  ImageAccess.cpp  ImageAccessMultiset.cpp  ImageAccessMultiset.h  ImageAccessWatcher.h  ImageFormatFeatures.cpp  ImageFormatFeatures.h  ImageSlice.cpp  ImageView.cpp  ImageView.h  ImagesAccessSet.cpp  ImagesAccessSet.h
vkr/pipeline/: AbstractPipeline.cpp  AbstractPipeline.h  DescriptorCounter.cpp  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  GraphicPipeline.cpp  GraphicPipeline.h  PipelineLayout.cpp  PipelineLayout.h  ShaderLoader.cpp  ShaderLoader.h  ShaderModule.cpp  ShaderModule.h
vkr/queue/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  CommandPoolSet.cpp  CommandPoolSet.h  CommandProducer.cpp  CommandProducer.h  CommandProducerCompute.cpp  CommandProducerCompute.h  CommandProducerGraphic.cpp  CommandProducerGraphic.h  CommandProducerTransfer.cpp  CommandProducerTransfer.h  CommandQueue.cpp  CommandQueue.h  CommandQueueCompute.cpp  CommandQueueCompute.h  CommandQueueGraphic.cpp  CommandQueueGraphic.h  CommandQueueTransfer.cpp  CommandQueueTransfer.h  Fence.cpp  Fence.h  ImageAccess.cpp  ImageAccess.h  ImageAccessWatcher.cpp  ImageAccessWatcher.h  ImageLayoutState.h  ImageLayoutWatcher.cpp  ImageLayoutWatcher.h  (+16 more)
(+497 files in other folders)
